--- a/style/styles.css
+++ b/style/styles.css
@@ -172,7 +172,7 @@ main {
 }
 
 .back {
-  background-image: url('image/back.jpg');
+  background-image: url('/image/back.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
