--- a/style/styles.css
+++ b/style/styles.css
@@ -580,7 +580,7 @@ footer {
     display: block;
   }
 
-  .hero h2 {
+  .back h2 {
     font-size: 2rem;
   }
 
@@ -613,11 +613,11 @@ footer {
     font-size: 1.2rem;
   }
 
-  .hero {
+  .back {
     height: 60vh;
   }
 
-  .hero h2 {
+  .back h2 {
     font-size: 1.8rem;
   }
 
