--- a/style/styles.css
+++ b/style/styles.css
@@ -172,7 +172,7 @@ main {
 }
 
 .back {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://kyowasagi.github.io/cameras-website/image/back.jpg') no-repeat center center/cover;
+  background: url('https://kyowasagi.github.io/cameras-website/image/back.jpg') no-repeat center center/cover;
   color: var(--text-light);
   height: 70vh;
   display: flex;
